objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Enterprise Solutions</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Selling</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Event Space</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Event Booked</fullName>
        </values>
        <values>
            <fullName>Event Booked%2FDate Confirmed</fullName>
        </values>
        <values>
            <fullName>Event Brief Sent</fullName>
        </values>
        <values>
            <fullName>Event CC Auth Signed</fullName>
        </values>
        <values>
            <fullName>Event Closed Lost</fullName>
        </values>
        <values>
            <fullName>Event Completed</fullName>
        </values>
        <values>
            <fullName>Event Contract SIgned</fullName>
        </values>
        <values>
            <fullName>Event Contract Sent</fullName>
        </values>
        <values>
            <fullName>Event Contract%2FCC Auth Sent</fullName>
        </values>
        <values>
            <fullName>Event Deposit Paid</fullName>
        </values>
        <values>
            <fullName>Event Inquiry</fullName>
        </values>
        <values>
            <fullName>Event Paid in Full</fullName>
        </values>
        <values>
            <fullName>Event Set Up Detail Discussed</fullName>
        </values>
        <values>
            <fullName>Event Space Tour Complete</fullName>
        </values>
        <values>
            <fullName>Event Space Tour Scheduled</fullName>
        </values>
        <values>
            <fullName>Lounge Info Sent</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mid-Market</fullName>
        <description>This sales process is used if Number of full time employee for opportunity is greater than 100 and less than 999</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Selling</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Office Space</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Selling</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partnership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Agreement Signed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>Paused</fullName>
        </values>
        <values>
            <fullName>Reached Out</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Sent to Provider</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_FTE__c</fullName>
        <description>Account's Account FTE</description>
        <formula>Account.Account_FTE__c</formula>
        <label>Account FTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Sales_Function__c</fullName>
        <description>Account Owner's Sales Function</description>
        <formula>TEXT(Account.Owner.Sales_Role__c)</formula>
        <label>Account Owner Sales Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Account's Owner</description>
        <formula>HYPERLINK(Account.OwnerId,Account.Owner.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Primary_Member__c</fullName>
        <formula>Account.Primary_Member__r.FirstName &amp; " " &amp; Account.Primary_Member__r.LastName</formula>
        <inlineHelpText>Paperwork will be sent to the primary member on the ACCOUNT level and not the OPPORTUNITY level.</inlineHelpText>
        <label>Account Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Deal_Margin__c</fullName>
        <label>Actual Deal Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_EBITDA_Margin__c</fullName>
        <label>Actual EBITDA Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <inlineHelpText>This is the Expected Start Date until Closed Won</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Architect)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attached_Proof_of_Pet_Vaccination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attached Proof of Pet Vaccination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Address__c</fullName>
        <label>Authorize Signatory Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_City__c</fullName>
        <label>Authorize Signatory City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_State__c</fullName>
        <label>Authorize Signatory State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Zip__c</fullName>
        <label>Authorize Signatory Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_Contract_Revenue__c</fullName>
        <description>This field is used to calculate the average of Contract Revenue as ((total price) * duration -  total discount)/ duration.
Here the total price is 'Amount', the duration is 'Weighted Avg Commitment Term (in months)' and the discount is Total Discounts In # Month. The minimum duration is 6 month CSI-985</description>
        <formula>Total_Contract_Revenue__c  / (IF(Commitment_Term_in_months__c &lt;= 6 || Commitment_Term_in_months__c == null, 6, Commitment_Term_in_months__c))</formula>
        <label>Avg Contract Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banner Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Network_Membership__c</fullName>
        <formula>IF( ISPICKVAL(Type__c ,"Network Membership"),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Network Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavioral_Lead_Score__c</fullName>
        <description>Behavioral lead score of lead on conversion.</description>
        <label>Behavioral Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Category__c</fullName>
        <label>Benefit Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates the opportunity to the billing account. The billing account is used in the space station for sending contracts.</description>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <label>Billing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_ACH__c</fullName>
        <label>Broker ACH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Broker Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Payment_Schedule_Custom__c</fullName>
        <description>If a Rep Choses Broker Fee Payment Schedule 'Other', then displayed here</description>
        <label>Broker Fee Payment Schedule (Custom)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Payment_Schedule__c</fullName>
        <description>Broker Fee Schedule</description>
        <label>Broker Fee Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20% -&gt; 5% -&gt; 5%</fullName>
                </value>
                <value>
                    <fullName>15% -&gt; 5% -&gt; 5%</fullName>
                </value>
                <value>
                    <fullName>10% -&gt; 2% -&gt; 2%</fullName>
                </value>
                <value>
                    <fullName>20% -&gt; 5%</fullName>
                </value>
                <value>
                    <fullName>15% -&gt; 5%</fullName>
                </value>
                <value>
                    <fullName>10% -&gt; 2%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Involved_DateTime__c</fullName>
        <label>Broker Involved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Broker_Involved_Rep__c</fullName>
        <label>Broker Involved Rep</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Involved [OLD]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Involvement_Indicated__c</fullName>
        <description>This field is created for new created opportunity page, Used for ST-3250</description>
        <inlineHelpText>Stores the broker involvement values from create opportunity page.</inlineHelpText>
        <label>Is Broker Involved ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brokerage_Company_Name__c</fullName>
        <label>Brokerage Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address__c</fullName>
        <formula>Building__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_City_State_Zip__c</fullName>
        <formula>Building__r.City__c &amp;", "&amp; Building__r.State__c &amp;" "&amp; Building__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building City, State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_City__c</fullName>
        <formula>Building__r.City__c</formula>
        <label>Building City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Email1__c</fullName>
        <label>Building Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Building_Email__c</fullName>
        <formula>Building__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Interest__c</fullName>
        <label>Building Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC- Andres Arguibel 2860</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATX-Congress</fullName>
                </value>
                <value>
                    <fullName>ATX-Interstate 35</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Glories</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKK-T-One Building</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Navy Yard</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
                <value>
                    <fullName>BL-Alexanderstraße</fullName>
                </value>
                <value>
                    <fullName>BLR-Embassy Golf Links</fullName>
                </value>
                <value>
                    <fullName>BLR-Embassy TechVillage</fullName>
                </value>
                <value>
                    <fullName>BLR- Galaxy</fullName>
                </value>
                <value>
                    <fullName>BLR-Koramangala</fullName>
                    <label>BLR-Prestige Atlanta</label>
                </value>
                <value>
                    <fullName>BLR-Hebbal</fullName>
                    <label>BLR-RMZ Latitude Commercial</label>
                </value>
                <value>
                    <fullName>BLR-Salarpuria Symbiosis</fullName>
                </value>
                <value>
                    <fullName>BLR-The Pavilion</fullName>
                </value>
                <value>
                    <fullName>BL-Stralauer Allee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Legal_Name__c</fullName>
        <formula>Building__r.Legal_Licensor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the specific building for which opportunity is associated</description>
        <inlineHelpText>This is the building / Nearest building to the geography entered by customer</inlineHelpText>
        <label>Building/Nearest Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_uuid__c</fullName>
        <formula>Building__r.UUID__c</formula>
        <label>Building uuid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_ID__c</fullName>
        <formula>Building__r.Responsible_CM__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM__c</fullName>
        <label>CM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMs_Email__c</fullName>
        <formula>Building__r.Responsible_CM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMs Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMs_Phone__c</fullName>
        <formula>Building__r.Responsible_CM__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMs Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI__c</fullName>
        <label>COI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVC__c</fullName>
        <label>CVC#</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <label>Canceled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changed Mind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Cash_Margin__c</fullName>
        <label>Cash Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cleaning__c</fullName>
        <label>Cleaning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <description>Formula reference through building to cluster table
&gt;&gt;&gt;please add equivalent field to tour object</description>
        <formula>IF(!ISBLANK(Building__c),Building__r.Cluster_Name__c,Geography__r.Nearest_Building__r.Cluster_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cluster for THIS opportunity</inlineHelpText>
        <label>Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <formula>IF(!ISBLANK(Building__c),Building__r.Cluster_Sales_Lead_Email__c,Geography__r.Nearest_Building__r.Cluster_Sales_Lead_Email__c)</formula>
        <inlineHelpText>This field contains the building cluster sales lead email</inlineHelpText>
        <label>Cluster Sales Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <formula>IF(!ISBLANK(Building__c),Building__r.Cluster_Sales_Lead_Name__c,Geography__r.Nearest_Building__r.Cluster_Sales_Lead_Name__c)</formula>
        <inlineHelpText>Sales Lead of cluster for THIS opportunity</inlineHelpText>
        <label>Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <formula>IF(!ISBLANK(Building__c),Building__r.Cluster_Sales_Manager_Email__c,Geography__r.Nearest_Building__r.Cluster_Sales_Manager_Email__c)</formula>
        <inlineHelpText>This field contains the building cluster Sales Manager  Email</inlineHelpText>
        <label>Cluster Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <description>Formula reference through building to cluster table
&gt;&gt;&gt;please add equivalent field to tour object</description>
        <formula>IF(!ISBLANK(Building__c),Building__r.Cluster_Sales_Manager_Name__c,Geography__r.Nearest_Building__r.Cluster_Sales_Manager_Name__c)</formula>
        <inlineHelpText>Sales Manager of cluster for THIS opportunity</inlineHelpText>
        <label>Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Date__c</fullName>
        <label>Collateral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Frequency__c</fullName>
        <label>Collateral Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi- Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Locations__c</fullName>
        <label>Collateral Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commitment_Term_in_months__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Months in the commitment term</inlineHelpText>
        <label>Weighted Avg Commitment Term (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Revenue__c</fullName>
        <formula>IF(ISBLANK(Net_TCV_Unweighted_Formula__c),Amount * Commitment_Term_in_months__c,Net_TCV_Unweighted_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Lead__c</fullName>
        <description>Formula reference through to building table
&gt;&gt;&gt;please add equivalent field to tour object</description>
        <formula>Building__r.Community_Lead_Name__c</formula>
        <inlineHelpText>Community Lead of building for THIS opportunity</inlineHelpText>
        <label>Community Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager_ID__c</fullName>
        <formula>Building__r.Responsible_CM__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager_UUID__c</fullName>
        <description>ContractEvent endpoint will send 'community_manager_uuid'</description>
        <inlineHelpText>ContractEvent endpoint will send 'community_manager_uuid'</inlineHelpText>
        <label>Community Manager UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager__c</fullName>
        <formula>Building__r.Community_Manager_Name__c</formula>
        <inlineHelpText>Responsible Community Manager of building for THIS opportunity</inlineHelpText>
        <label>Community Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ContractEvent endpoint will send 'community_manager_uuid' need to map with the corresponding contact</description>
        <inlineHelpText>ContractEvent endpoint will send 'community_manager_uuid' need to map with the corresponding contact</inlineHelpText>
        <label>Community User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Community User)</relationshipLabel>
        <relationshipName>OpportunitiesC60b</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Solution_Detail__c</fullName>
        <inlineHelpText>Enter Competitor, if known</inlineHelpText>
        <label>Competitor Solution Detail</label>
        <type>TextArea</type>
    </fields>
</CustomObject>